# 0716RAGPJ

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI知识库RAG平台_产品手册_合并版_V2.1.md  CONTRIBUTING.md  Cursor项目框架搭建提示词.md  LICENSE  README-组员协作开发-Windows.md  README.md  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: 0001_create_knowledge_base_tables.py
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  test_api.py  test_kb_data.py  test_kb_full.py
backend/alembic/: env.py
backend/app/: PLACEHOLDER.md  __init__.py  main.py
backend/tests/: conftest.py  test_audit_schemas.py  test_change_password.py  test_documents.py  test_embedding_config.py  test_feature_integrations.py  test_health_auth.py  test_history_retention.py  test_hit_rate_semantics.py  test_identity_admin_policy.py  test_knowledge_bases.py  test_llm_guard.py  test_markdown_chunking.py  test_qa_api.py  (+17 more)
contracts/: README.md  openapi.json
docs/: API.md  API_INTEGRATION_GUIDE.md  CLOUD_DEPLOY.md  CONTRACT.md  CURSOR_PROMPT_UI_REBUILD.md  knowledge-base-module.md  openapi.json
frontend/: README-UI美化.md  README.md
scripts/: README_fix_unique_super.md  e2e_real_stack.ps1  e2e_results.json  fix_unique_super_admin.py  generate_openapi.py  preview_frontend.py  seed_qa_test_kb.py  verify_qa_stack.ps1
testdoc/: 01_年假与加班制度.txt  02_差旅与报销指引.md  03_信息安全与账号权限规范.docx  05_DOC解析样例_入职须知.doc  06_入职试用期手册_docx结构.doc  README.md  _generate_office.py  _verify_parse.py
(+192 files in other folders)
