[project]
name = "ai-knowledge-base-rag"
version = "2.1.0"
description = "AI 知识库 RAG 平台"
requires-python = ">=3.10,<3.11"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/alembic/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
